--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-CMakeFiles
-cex
-cmake_install.cmake
-CMakeCache.txt
-Makefile
+**/CMakeFiles
+**/cmake_install.cmake
+**/CMakeCache.txt
+**/Makefile
 
+cex
+framework/tests/cex_tests
