--- a/framework/tests/CMakeLists.txt
+++ b/framework/tests/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 3.10)
 project(cex_tests C)
 set(CMAKE_C_STANDARD 11)
-add_executable(cex_tests test_dynamic_array.c ../dynamic_array.c ../dynamic_string.c)
+add_executable(cex_tests test_array.c ../array.c ../string.c)
